--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/prgrms-web-devcourse/OFF_Design_System.git"
   },
   "private": false,
-  "version": "0.0.23",
+  "version": "0.0.24",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && npm run tailwind",
@@ -62,7 +62,7 @@
       "url": "https://github.com/jonghyunlee95"
     },
     {
-      "name": "Jiseon Lim",
+      "name": "limjiseon",
       "email": "dpf226@naver.com",
       "url": "https://github.com/Lim-JiSeon"
     }
