--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
       "url": "https://github.com/jonghyunlee95"
     },
     {
-      "name": "limjiseon",
+      "name": "Jiseon Lim",
       "email": "dpf226@naver.com",
       "url": "https://github.com/Lim-JiSeon"
     }
