--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,9 +1,10 @@
 name: Storybook Deployment
 run-name: ${{ github.actor }}의 스토리북 배포
-on:
-  pull_request:
-    branches:
-      - develop
+on: push
+# on:
+#   pull_request:
+#     branches:
+#       - develop
 jobs:
   storybook:
     runs-on: ubuntu-20.04
