--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,10 +1,9 @@
 name: Storybook Deployment
 run-name: ${{ github.actor }}의 스토리북 배포
-on: push
-# on:
-#   pull_request:
-#     branches:
-#       - develop
+on:
+  pull_request:
+    branches:
+      - develop
 jobs:
   storybook:
     runs-on: ubuntu-20.04
