--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -6,7 +6,7 @@ on:
       - develop
 jobs:
   storybook:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     outputs:
       status: ${{ job.status }}
     steps:
@@ -34,7 +34,5 @@ jobs:
 
       - name: comment PR
         uses: thollander/actions-comment-pull-request@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           message: "🚀storybook: ${{ steps.chromatic.outputs.storybookUrl }}"
