--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "eslint-plugin-storybook": "^0.6.14",
     "postcss": "^8.4.31",
     "storybook": "^7.4.6",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
